--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <title>Pagina Web</title>
   </head>
   <body>
-    <p>Hola</p>
+    <h2>Bosque Fósil Punta Pelluco</h2>
+    <p>El Bosque Fósil Punta Pelluco se</p>
   </body>
 </html>
