--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
   </head>
   <body>
     <h2>Bosque Fósil Punta Pelluco</h2>
-    <p>El Bosque Fósil Punta Pelluco se</p>
+    <p>El Bosque Fósil Punta Pelluco es considerado un <strong>santuraio de la naturaleza</strong> del plesitoceno, que se ubica cerca de la localidad de Puerto Montt</p>
   </body>
 </html>
