--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <html>
-  <head>
-    <title>Bosque Fósil Punta Pelluco</title>
-  </head>
-  <body>
-    <h2>Bosque Fósil Punta Pelluco</h2>
-    <p>El Bosque Fósil Punta Pelluco es considerado un <strong>santuraio de la naturaleza</strong> del plesitoceno, que se ubica cerca de <br>
-      la localidad de Puerto Montt, la capital de la región de Los Lagos.</p>
-    <p>Desde el terminal de buses, es posible llegar al Bosque Fósil en 20 minutos mediante buses, los cuales salen cada 5 minutos desde el<br>
-    terminal. También, si se posee un vehículo como un automóvil, se puede llegar en tan solo 9 minutos. Si no se posee un vehículo, se <br>
-    puede llegar a pie en cerca de 1 hora en condiciones óptimas.</p>
-  </body>
+    <head>
+        <title>Bosque Fósil Punta Pelluco</title>
+    </head>
+    <body>
+        <h2>Bosque Fósil Punta Pelluco</h2>
+        <p>El Bosque Fósil Punta Pelluco es considerado un <strong>santuario de la naturaleza</strong> del plesitoceno, que se ubica cerca de <br>
+        la localidad de Puerto Montt, la capital de la región de Los Lagos.</p>
+        <p>Desde el terminal de buses, es posible llegar al Bosque Fósil en 20 minutos mediante buses, los cuales salen cada 5 minutos desde el<br>
+        terminal. También, si se posee un vehículo como un automóvil, se puede llegar en tan solo 9 minutos. Si no se posee un vehículo, se <br>
+        puede llegar a pie en cerca de 1 hora en condiciones óptimas.</p>
+    </body>
 </html>
