--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
         <h2>Bosque Fósil Punta Pelluco</h2>
         <p>El Bosque Fósil Punta Pelluco es considerado un <strong>santuario de la naturaleza</strong> del plesitoceno, que se ubica cerca de <br>
         la localidad de Puerto Montt, la capital de la región de Los Lagos. Lo que se considera parte del Bosque Fósil son 111 tocones de alerce<br>
-        de diversos diámetros, repartidos a lo largo de 40000m<sup>2</sup></p>
+        de diversos diámetros, repartidos a lo largo de 40000m<sup>2</sup>. Lo peculiar de estos tocones y una de las razones por las que<br>
+        deberíamos fomentar su preservamiento es su antigüedad. La edad de los tocones está calculada en cerca de 50 mil años AP.</p>
         <p>Desde el terminal de buses, es posible llegar al Bosque Fósil en 20 minutos mediante buses, los cuales salen cada 5 minutos desde el<br>
         terminal. También, si se posee un vehículo como un automóvil, se puede llegar en tan solo 9 minutos. Si no se posee un vehículo, se <br>
         puede llegar a pie en cerca de 1 hora en condiciones óptimas.</p>
