--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
     </head>
     <body>
         <h2>Bosque Fósil Punta Pelluco</h2>
+        <h4>Descripción</h4>
         <p>El Bosque Fósil Punta Pelluco es considerado un <strong>santuario de la naturaleza</strong> del plesitoceno, que se ubica cerca de <br>
         la localidad de Puerto Montt, la capital de la región de Los Lagos. Lo que se considera parte del Bosque Fósil son <strong>111 tocones</strong> de alerce<br>
         de diversos diámetros, repartidos a lo largo de <strong>40000m<sup>2</sup></strong>. Lo peculiar de estos tocones y una de las razones por las que<br>
         deberíamos fomentar su preservamiento es su antigüedad. La edad de los tocones está calculada en cerca de 50 mil años AP.</p>
+        <h4>Localización</h4>
         <p>Desde el terminal de buses, es posible llegar al Bosque Fósil en 20 minutos mediante buses, los cuales salen cada 5 minutos desde el<br>
         terminal. También, si se posee un vehículo como un automóvil, se puede llegar en tan solo 9 minutos. Si no se posee un vehículo, se <br>
-        puede llegar a pie en cerca de 1 hora en condiciones óptimas.</p>
+        puede llegar a pie en cerca de 1 hora en condiciones óptimas, mientras se disfruta la costa de Puerto Montt.</p>
     </body>
 </html>
