--- a/index.html
+++ b/index.html
@@ -9,9 +9,13 @@
         la localidad de Puerto Montt, la capital de la región de Los Lagos. Lo que se considera parte del Bosque Fósil son <strong>111 tocones</strong> de alerce<br>
         de diversos diámetros, repartidos a lo largo de <strong>40000m<sup>2</sup></strong>. Lo peculiar de estos tocones y una de las razones por las que<br>
         deberíamos fomentar su preservamiento es su antigüedad. La edad de los tocones está calculada en cerca de 50 mil años AP.</p>
-        <h4>Localización</h4>
+        <h4>Ubicación</h4>
         <p>Desde el terminal de buses, es posible llegar al Bosque Fósil en 20 minutos mediante buses, los cuales salen cada 5 minutos desde el<br>
         terminal. También, si se posee un vehículo como un automóvil, se puede llegar en tan solo 10 minutos. Si no se posee un vehículo, se <br>
         puede llegar a pie en cerca de 1 hora en condiciones óptimas, mientras se disfruta la costa de Puerto Montt.</p>
+        <h4>Horario</h4>
+        <p>El Bosque Fósil es una playa, con diversos tocones de árboles con muchosn año (de ahí el nombre de Bosque Fósil), por lo tanto no tiene<br>
+        un horario de entrada y salida. La playa es propiedad pública, por eso es <strong>ilegal cobrar</strong> por su entrada, ya que son <br>
+        consideradas bienes nacionales y se pueden visitar libremente.</p>
     </body>
 </html>
