--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<html>
+<!DOCTYPE html>
+<html lang="es">
     <head>
         <title>Bosque Fósil Punta Pelluco</title>
     </head>
@@ -18,7 +19,7 @@
                 terminal. También, si se posee un vehículo como un automóvil, se puede llegar en tan solo 10 minutos. Si no se posee un vehículo, se <br>
                 puede llegar a pie en cerca de 1 hora en condiciones óptimas, mientras se disfruta la costa de Puerto Montt.</p>
             </div>
-            <div class="hours">
+            <div class="hours_of_attendance">
                 <h4>Horario</h4>
                 <p>El Bosque Fósil es una playa, con diversos tocones de árboles con muchosn año (de ahí el nombre de Bosque Fósil), por lo tanto no tiene<br>
                 un horario de entrada y salida. La playa es propiedad pública, por eso es <strong>ilegal cobrar</strong> por su entrada, ya que son <br>
