--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="es">
     <head>
         <title>Bosque Fósil Punta Pelluco</title>
+        <link rel="stylesheet" href="custom.css">
     </head>
     <body>
         <div class="main-page">
