--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </div>
             <div class="hours_of_attendance">
                 <h4>Horario</h4>
-                <p>El Bosque Fósil es una playa, con diversos tocones de árboles con muchosn año (de ahí el nombre de Bosque Fósil), por lo tanto no tiene<br>
+                <p>El Bosque Fósil es una playa, con diversos tocones de árboles con muchos años de edad (de ahí el nombre de Bosque Fósil), por lo tanto no tiene<br>
                 un horario de entrada y salida. La playa es propiedad pública, por eso es <strong>ilegal cobrar</strong> por su entrada, ya que son <br>
                 consideradas bienes nacionales y se pueden visitar libremente.</p>
             </div>
