--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     </head>
     <body>
         <div class="main-page">
+            <div class="main-image">
+                <img src="media/images/dji_0904">
+            </div>
             <h1>Bosque Fósil Punta Pelluco</h1>
             <div class="description">
                 <h4>Descripción</h4>
