--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="es">
     <head>
         <title>Bosque Fósil Punta Pelluco</title>
-        <link rel="stylesheet" href="custom.css" alt="Foto">
+        <link rel="stylesheet" href="custom.css">
     </head>
     <body>
         <div class="main-page">
             <div class="main-image">
-                <img src="media/images/dji_0904">
+                <img src="media/images/dji_0904.png" alt="Foto">
             </div>
             <h1>Bosque Fósil Punta Pelluco</h1>
             <div class="description">
