--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
                 un horario de entrada y salida. La playa es propiedad pública, por eso es <strong>ilegal cobrar</strong> por su entrada, ya que son <br>
                 consideradas bienes nacionales y se pueden visitar libremente.</p>
             </div>
+            <div class="footer">
+                <footer>
+                   <p>Footer</p> 
+                </footer>
+            </div>
         </div>
     </body>
 </html>
