--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
                 la localidad de Puerto Montt, la capital de la región de Los Lagos. Lo que se considera parte del Bosque Fósil son <strong>111 tocones</strong> de alerce<br>
                 de diversos diámetros, repartidos a lo largo de <strong>40000m<sup>2</sup></strong>. Lo peculiar de estos tocones y una de las razones por las que<br>
                 deberíamos fomentar su preservamiento es su antigüedad. La edad de los tocones está calculada en cerca de 50 mil años AP.</p>
+                <p>El bosque fósil se habría formado in situ por un flujo de sedimento y agua que se movilizó desde las laderas de un volcán que enterró <br>
+                una serie de tocones de alerce.​ Fueron descritos por primera vez en 1976 y habrían quedado al descubierto en la playa tras la ruptura tectónica <br>
+                que produjo el terremoto de 1960 en Chile. Se encuentran dispersos unos 50 metros sobre la playa y son visibles solo con marea baja.​</p>
             </div>
             <br>
             <div class="ubication">
