--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
                 <p>El bosque fósil se habría formado in situ por un flujo de sedimento y agua que se movilizó desde las laderas de un volcán que enterró <br>
                 una serie de tocones de alerce.​ Fueron descritos por primera vez en 1976 y habrían quedado al descubierto en la playa tras la ruptura tectónica <br>
                 que produjo el terremoto de 1960 en Chile. Se encuentran dispersos unos 50 metros sobre la playa y son visibles solo con marea baja.​</p>
+                <p>Fue declarado santuario protegido el <strong>17 de enero del 1978</strong>.</p>
+                <p>A principios de la década de 1980, algunas muestras fueron datadas entre 42 600 y 45 600 años AP con carbono 14,5​ mientras que a comienzos <br>
+                de la década de 2000, una nueva datación indicó que oscilaría entre los 49 370 y 49 780 años AP.3​</p>
             </div>
             <br>
             <div class="ubication">
