--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <br>
             <div class="footer">
                 <footer>
-                   <p id="footer-id">Este Sitio Web fue hecho usando información de Wikipedia e información recopilada autónomamente.</p> 
+                   <p id="footer-p">Este Sitio Web fue hecho usando información de Wikipedia e información recopilada autónomamente.</p> 
                 </footer>
             </div>
         </div>
