--- a/index.html
+++ b/index.html
@@ -6,8 +6,13 @@
     </head>
     <body>
         <div class="main-page">
+            <div class="header">
+                <header>
+                    <img src="media/images/dsmp_logo.png" alt="DSPM">
+                </header>
+            </div>
             <div class="main-image">
-                <img src="media/images/dji_0904.png" alt="Foto">
+                <img src="media/images/dji_0904.png" alt="Playa">
             </div>
             <h1>Bosque Fósil Punta Pelluco</h1>
             <br>
