--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <div class="main-page">
             <div class="header">
                 <header>
-                    <img src="media/images/dspm_logo.png" alt="DSPM">
+                    <img src="media/images/dspm_logo.png" alt="DSPM" height="75" width="75">
                 </header>
             </div>
             <div class="main-image">
