--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
             <div class="header">
                 <header>
                     <img src="media/images/dspm_logo.png" alt="DSPM" height="75" width="75">
+                    <img src="media/images/logo_ib.png" alt="IB" height="75" width="75">
                 </header>
             </div>
             <div class="main-image">
