--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
                 <p>Desde el terminal de buses, es posible llegar al Bosque Fósil en 20 minutos mediante buses, los cuales salen cada 5 minutos desde el<br>
                 terminal. También, si se posee un vehículo como un automóvil, se puede llegar en tan solo 10 minutos. Si no se posee un vehículo, se <br>
                 puede llegar a pie en cerca de 1 hora en condiciones óptimas, mientras se disfruta la costa de Puerto Montt.</p>
+                <a href="https://www.google.cl/maps/dir/Terminal+Rodoviario+de+Buses+de+Puerto+Montt+-+Diego+Portales+1001,+Puerto+Montt,+Los+Lagos/Torre+Mirador+Playa+Pelluco,+Puerto+Montt/@-41.4795525,-72.9472205,14z/data=!3m1!4b1!4m13!4m12!1m5!1m1!1s0x96183bb236071c8f:0xe754f9e939fb411!2m2!1d-72.9503922!2d-41.4777311!1m5!1m1!1s0x96183b1b72c891f3:0xcce390973249725!2m2!1d-72.9052416!2d-41.4865057?entry=ttu&g_ep=EgoyMDI0MDkyMy4wIKXMDSoASAFQAw%3D%3D">
+                    <p>Cómo llegar desde el terminal de buses hasta Punta Pelluco</p>
+                </a>
             </div>
             <br>
             <div class="hours_of_attendance">
