--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
                 <header>
                     <img src="media/images/dspm_logo.png" alt="DSPM" height="75" width="75">
                     <img src="media/images/logo_ib.png" alt="IB" height="75" width="75">
+                    <h1>Bosque Fósil Punta Pelluco</h1>
                 </header>
             </div>
             <br>
