--- a/index.html
+++ b/index.html
@@ -43,6 +43,16 @@
                 <a href="https://www.google.cl/maps/dir/Terminal+Rodoviario+de+Buses+de+Puerto+Montt+-+Diego+Portales+1001,+Puerto+Montt,+Los+Lagos/Torre+Mirador+Playa+Pelluco,+Puerto+Montt/@-41.4795525,-72.9472205,14z/data=!3m1!4b1!4m13!4m12!1m5!1m1!1s0x96183bb236071c8f:0xe754f9e939fb411!2m2!1d-72.9503922!2d-41.4777311!1m5!1m1!1s0x96183b1b72c891f3:0xcce390973249725!2m2!1d-72.9052416!2d-41.4865057?entry=ttu&g_ep=EgoyMDI0MDkyMy4wIKXMDSoASAFQAw%3D%3D">
                     <p>Cómo llegar desde el terminal de buses hasta Punta Pelluco</p>
                 </a>
+                <iframe
+                    width="600"
+                    height="450"
+                    style="border:0"
+                    loading="lazy"
+                    allowfullscreen
+                    referrerpolicy="no-referrer-when-downgrade"
+                    src="https://www.google.com/maps/embed/v1/place?key=API_KEY
+                    &q=Space+Needle,Seattle+WA">
+                </iframe>
             </div>
             <br>
             <div class="hours_of_attendance">
